# codec-alac

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  _config.yml  library.properties
docs/html/: ALACAudioTypes_8h_source.html  ALACBitUtilities_8h_source.html  ALACDecoder_8h_source.html  ALACEncoder_8h_source.html  ALAC_8h_source.html  EndianPortable_8h_source.html  aglib_8h_source.html  annotated.html  classALACDecoder-members.html  classALACDecoder.html  classALACDecoder__coll__graph.map  classALACDecoder__coll__graph.md5  classALACEncoder-members.html  classALACEncoder.html  classes.html  dir_2b5081e83691eef9c8af27b698300242.html  dir_5ada86e73820e9575b66b931ce303ba0.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dplib_8h_source.html  files.html  graph_legend.html  index.html  matrixlib_8h_source.html  structAGParamRec-members.html  structAGParamRec.html  structALACAudioChannelLayout-members.html  structALACAudioChannelLayout.html  structALACSpecificConfig-members.html  structALACSpecificConfig.html  structAudioFormatDescription-members.html  structAudioFormatDescription.html  structBitBuffer-members.html  structBitBuffer.html
docs/html/search/: all_0.js  all_1.js  classes_0.js  classes_1.js
src/: ALAC.h
